--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "NAME-REOPSITORY-NAME",
+  "name": "NAME_REOPSITORY_NAME",
   "version": "1.0.0",
   "description": "",
-  "homepage": "https://serzh2577.github.io/NAME-REOPSITORY-NAME",
+  "homepage": "https://serzh2577.github.io/NAME_REOPSITORY_NAME",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /NAME-REOPSITORY-NAME/"
+    "build": "parcel build src/*.html --public-url /NAME_REOPSITORY_NAME/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/serzh2577/NAME-REOPSITORY-NAME.git"
+    "url": "git+https://github.com/serzh2577/NAME_REOPSITORY_NAME.git"
   },
   "keywords": [],
   "author": "eliarr",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/serzh2577/NAME-REOPSITORY-NAME/issues"
+    "url": "https://github.com/serzh2577/NAME_REOPSITORY_NAME/issues"
   },
   "dependencies": {
     "modern-normalize": "^1.1.0"
